fixing bugs, 2 new https
