# backend/docs/swagger.yaml
@@ -1,4 +1,20 @@
 definitions:
+  gotype.LevelComplaint:
+    properties:
+      author_id:
+        type: integer
+      level_id:
+        type: integer
+      message:
+        type: string
+      reason:
+        type: string
+    required:
+    - author_id
+    - level_id
+    - message
+    - reason
+    type: object
   gotype.User:
     properties:
       name:
@@ -9,6 +25,22 @@ definitions:
     required:
     - name
     - password
+    type: object
+  gotype.UserComplaint:
+    properties:
+      author_id:
+        type: integer
+      message:
+        type: string
+      reason:
+        type: string
+      user_id:
+        type: integer
+    required:
+    - author_id
+    - message
+    - reason
+    - user_id
     type: object
   handler.errorResponse:
     properties:
@@ -207,6 +239,86 @@ paths:
           schema:
             $ref: '#/definitions/handler.errorResponse'
       summary: Logout
+      tags:
+      - user-actions
+  /user-actions/write-level-complaint:
+    post:
+      consumes:
+      - application/json
+      description: 'Send level complaint to server. Possible Reason values: Offencive
+        name, Offencive video, Offencive audio, Offencive text'
+      operationId: write-level-complaint
+      parameters:
+      - description: new complaint info
+        in: body
+        name: input
+        required: true
+        schema:
+          $ref: '#/definitions/gotype.LevelComplaint'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+        "400":
+          description: 'Possible messages: ERR_ACCESS_TOKEN_WRONG - Wrong structure
+            of Access Token/No Access Token; ERR_INVALID_INPUT - Wrong structure of
+            input json/Invalid Reason;'
+          schema:
+            $ref: '#/definitions/handler.errorResponse'
+        "401":
+          description: 'Possible messages: ERR_UNAUTHORIZED - Access Token expired'
+          schema:
+            $ref: '#/definitions/handler.errorResponse'
+        "500":
+          description: 'Possible messages: ERR_INTERNAL - Error on server'
+          schema:
+            $ref: '#/definitions/handler.errorResponse'
+        default:
+          description: ""
+          schema:
+            $ref: '#/definitions/handler.errorResponse'
+      summary: Write Level Complaint
+      tags:
+      - user-actions
+  /user-actions/write-user-complaint:
+    post:
+      consumes:
+      - application/json
+      description: 'Send user complaint to server. Possible Reason values: Cheating,
+        Offencive nickname, Unsportsmanlike conduct'
+      operationId: write-user-complaint
+      parameters:
+      - description: new complaint info
+        in: body
+        name: input
+        required: true
+        schema:
+          $ref: '#/definitions/gotype.UserComplaint'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+        "400":
+          description: 'Possible messages: ERR_ACCESS_TOKEN_WRONG - Wrong structure
+            of Access Token/No Access Token; ERR_INVALID_INPUT - Wrong structure of
+            input json/Invalid Reason;'
+          schema:
+            $ref: '#/definitions/handler.errorResponse'
+        "401":
+          description: 'Possible messages: ERR_UNAUTHORIZED - Access Token expired'
+          schema:
+            $ref: '#/definitions/handler.errorResponse'
+        "500":
+          description: 'Possible messages: ERR_INTERNAL - Error on server'
+          schema:
+            $ref: '#/definitions/handler.errorResponse'
+        default:
+          description: ""
+          schema:
+            $ref: '#/definitions/handler.errorResponse'
+      summary: Write User Complaint
       tags:
       - user-actions
 securityDefinitions:
