# backend/pkg/handler/user-actions.go
@@ -3,6 +3,7 @@ package handler
 import (
 	gotype "github.com/Gadzet005/GoType/backend"
 	"github.com/gin-gonic/gin"
+	"golang.org/x/exp/slices"
 	"net/http"
 )
 
@@ -34,6 +35,7 @@ func (h *Handler) logout(c *gin.Context) {
 
 	if !exists {
 		NewErrorResponse(c, http.StatusBadRequest, gotype.ErrAccessToken)
+		return
 	}
 
 	err := h.services.UserActions.DropRefreshToken(curId.(int))
@@ -45,10 +47,6 @@ func (h *Handler) logout(c *gin.Context) {
 
 	c.JSON(http.StatusOK, map[string]interface{}{})
 }
-
-//type getUserInfoStruct struct {
-//	id int `json:"id"`
-//}
 
 // @Summary Get User Info
 // @Tags user-actions
@@ -63,17 +61,11 @@ func (h *Handler) logout(c *gin.Context) {
 // @Failure default {object} errorResponse
 // @Router /user-actions/get-user-info [get]
 func (h *Handler) getUserInfo(c *gin.Context) {
-	//var input getUserInfoStruct
-	//
-	//if err := c.BindJSON(&input); err != nil {
-	//	NewErrorResponse(c, http.StatusBadRequest, err.Error())
-	//	return
-	//}
-
 	curId, exists := c.Get("id")
 
 	if !exists {
 		NewErrorResponse(c, http.StatusBadRequest, gotype.ErrAccessToken)
+		return
 	}
 
 	username, access, banTime, banReason, err := h.services.UserActions.GetUserById(curId.(int))
@@ -84,9 +76,80 @@ func (h *Handler) getUserInfo(c *gin.Context) {
 	}
 
 	c.JSON(http.StatusOK, map[string]interface{}{
+		"id":        curId,
 		"username":  username,
 		"access":    access,
 		"banTime":   banTime,
 		"banReason": banReason,
 	})
+}
+
+// @Summary Write User Complaint
+// @Tags user-actions
+// @Description Send user complaint to server. Possible Reason values: Cheating, Offencive nickname, Unsportsmanlike conduct
+// @ID write-user-complaint
+// @Accept json
+// @Produce json
+// @Param input body gotype.UserComplaint true "new complaint info"
+// @Success 200
+// @Failure 400 {object} errorResponse "Possible messages: ERR_ACCESS_TOKEN_WRONG - Wrong structure of Access Token/No Access Token; ERR_INVALID_INPUT - Wrong structure of input json/Invalid Reason;"
+// @Failure 401 {object} errorResponse "Possible messages: ERR_UNAUTHORIZED - Access Token expired"
+// @Failure 500 {object} errorResponse "Possible messages: ERR_INTERNAL - Error on server"
+// @Failure default {object} errorResponse
+// @Router /user-actions/write-user-complaint [post]
+func (h *Handler) WriteUserComplaint(c *gin.Context) {
+	var input gotype.UserComplaint
+
+	if err := c.BindJSON(&input); err != nil {
+		NewErrorResponse(c, http.StatusBadRequest, gotype.ErrInvalidInput)
+		return
+	}
+
+	if slices.Index(gotype.UserComplaintReasons[:], input.Reason) == -1 {
+		NewErrorResponse(c, http.StatusBadRequest, gotype.ErrInvalidInput)
+		return
+	}
+
+	err := h.services.UserActions.CreateUserComplaint(input)
+	if err != nil {
+		NewErrorResponse(c, gotype.CodeErrors[err.Error()], err.Error())
+		return
+	}
+
+	c.JSON(http.StatusOK, map[string]interface{}{})
+}
+
+// @Summary Write Level Complaint
+// @Tags user-actions
+// @Description Send level complaint to server. Possible Reason values: Offencive name, Offencive video, Offencive audio, Offencive text
+// @ID write-level-complaint
+// @Accept json
+// @Produce json
+// @Param input body gotype.LevelComplaint true "new complaint info"
+// @Success 200
+// @Failure 400 {object} errorResponse "Possible messages: ERR_ACCESS_TOKEN_WRONG - Wrong structure of Access Token/No Access Token; ERR_INVALID_INPUT - Wrong structure of input json/Invalid Reason;"
+// @Failure 401 {object} errorResponse "Possible messages: ERR_UNAUTHORIZED - Access Token expired"
+// @Failure 500 {object} errorResponse "Possible messages: ERR_INTERNAL - Error on server"
+// @Failure default {object} errorResponse
+// @Router /user-actions/write-level-complaint [post]
+func (h *Handler) WriteLevelComplaint(c *gin.Context) {
+	var input gotype.LevelComplaint
+
+	if err := c.BindJSON(&input); err != nil {
+		NewErrorResponse(c, http.StatusBadRequest, gotype.ErrInvalidInput)
+		return
+	}
+
+	if slices.Index(gotype.LevelComplaintReasons[:], input.Reason) == -1 {
+		NewErrorResponse(c, http.StatusBadRequest, gotype.ErrInvalidInput)
+		return
+	}
+
+	err := h.services.UserActions.CreateLevelComplaint(input)
+	if err != nil {
+		NewErrorResponse(c, gotype.CodeErrors[err.Error()], err.Error())
+		return
+	}
+
+	c.JSON(http.StatusOK, map[string]interface{}{})
 }
